@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2012-2021   The R Core Team.
+ *  Copyright (C) 2012-2022   The R Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -85,7 +85,7 @@ static const R_ExternalMethodDef ExtEntries[] = {
 
     EXTDEF(countfields, 6),
     EXTDEF(readtablehead, 7),
-    EXTDEF(typeconvert, 5),
+    EXTDEF(typeconvert, 6),
     EXTDEF(writetable, 11),
 
     EXTDEF(addhistory, 1),
